--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
+    "concurrently": "^7.6.0",
     "eslint": "^8.22.0",
     "eslint-plugin-storybook": "^0.6.10",
     "eslint-plugin-vue": "^9.3.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.4",
     "vite": "^4.0.0",
     "vue-loader": "^16.8.3"
   }
