--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build-storybook": "npm build:tailwind && build-storybook"
   },
   "dependencies": {
+    "storybook-tailwind-dark-mode": "^1.0.15",
     "storybook-tailwind-foundations": "^1.1.2",
     "vue": "^3.2.45"
   },
